welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:-6: error: Missing closing brace `}' assumed here
try {
^answerCell:1: error: expected class or object definition
def answerCell(isMorning:Boolean, isMom:Boolean, isAsleep:Boolean):Boolean = {
^